tests/ui/unboxed-closures/unboxed-closure-sugar-equiv.stderr
error[E0277]: the trait bound `dyn Foo<(char,), Output = ()>: Eq<dyn Foo<(), Output = ()>>` is not satisfied
  --> $DIR/unboxed-closure-sugar-equiv.rs:46:11
   |
LL |           dyn Foo(char)                                               >();
   |           ^^^^^^^^^^^^^ the trait `Eq<dyn Foo<(), Output = ()>>` is not implemented for `dyn Foo<(char,), Output = ()>`
   |
note: required by a bound in `eq`
  --> $DIR/unboxed-closure-sugar-equiv.rs:18:12
   |
LL | fn eq<A,B: Eq<A>>() { }
   |            ^^^^^ required by this bound in `eq`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
